tests/failures/invalid_date.rs
use todo_by::todo_by;

fn main() {
    todo_by!("2024/01/01");
}
